# askwol

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md
examples/: broken.ttl  sample.ttl
html/: index.html
html/ontologies/: broken.ttl  sample.ttl
html/pylode/: sample.html  test.html
src/askwol/: __init__.py  cache.py  cli.py  definition_docs.py  deprecation.py  imports_check.py  internal_terms.py  iri_scheme.py  iri_strategy.py  iri_utils.py  lang_tags.py  license_check.py  mermaid_diagram.py  metadata_validator.py  models.py  non_ontology_terms.py  parser.py  reasoner_checks.py  report.py  report_html.py  resolver.py  shacl_runner.py  skos_concepts.py  templates.py  term_inventory.py  term_validator.py  usage.py  web.py
src/askwol/shapes/: definition_documentation.ttl  internal_terms.ttl  non_ontology_terms.ttl  ontology_metadata.ttl  term_inventory.ttl
tests/: test_api_integration.py  test_broken_fixture.py  test_definition_docs.py  test_deprecation.py  test_imports_check.py  test_internal_terms.py  test_iri_scheme.py  test_iri_strategy.py  test_iri_utils.py  test_lang_tags.py  test_license_check.py  test_mermaid_diagram.py  test_metadata_validator.py  test_non_ontology_terms.py  test_parser.py  test_reasoner_checks.py  test_report_html.py  test_skos_concepts.py  test_term_inventory.py  test_term_validator.py  test_unused_prefixes.py
