[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askwol"
version = "0.1.0"
description = "OWL ontology review and validation: class diagram, namespace and term checks, metadata and documentation review"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Kathrin Füllenbach", email = "nes@tdcc.nl" },
    { name = "Dani Metilli", email = "nes@tdcc.nl" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "rdflib>=7.3,<8",
    "httpx>=0.27",
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-multipart>=0.0.9",
    "pyshacl==0.40.0",
    "owlrl>=7.6.1,<8",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
askwol = "askwol.cli:main"

[project.urls]
Homepage = "https://lod-4tu.tudelft.nl/askwol"
Repository = "https://github.com/TDCC-NES/askwol"
Issues = "https://github.com/TDCC-NES/askwol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/askwol"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
